fixed icon responsiveness on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,6 +86,7 @@ h3 {
   overflow-x: hidden;
   border: 2px solid #E3E1D6;
   width: 270px;
+  min-width: 270px;
   height: 270px;
   border-radius: 50%;
   margin: 20px;
@@ -117,6 +118,7 @@ h3 {
   display: flex;
   flex-direction: column;
   width: 250px;
+  min-width: 250px;
   height: 400px;
   border-radius: 25px;
   border: 2px solid #E3E1D6;
